# PowerpayFlet

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: new-build-henri-ndoko.yml
src/: deviceData.py  deviceList.py  firebase_config.py  google-services.json  home.py  login.py  main.py  noDeviceDat.py  user_profile.py
src/assets/: loading.lottie
