[project]
name = "powerpayfletproject"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "JEFF TARIMO", email = "tarimojeff@gmail.com" }
]
dependencies = [
    "flet==0.27.6",
    "firebase_admin==6.7.0",
    "pandas==2.2.3",
    "requests==2.32.3"
]

[tool.flet]
org = "com.powerpayafrica"
assets = ["assets"]
product = "Powerpay Africa"
company = "Powerpay Africa"
copyright = "Copyright (C) 2025 by Powerpay Africa"

[tool.flet.app]
path = "src"

# Permissions
permissions = ["photo_library"]

[tool.flet.android.permission]
"android.permission.READ_EXTERNAL_STORAGE" = true

[tool.flet.pack]
android_permissions = ["READ_EXTERNAL_STORAGE"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}
